Added Lottie animation for intro

--- a/StressBomb/Base.lproj/LaunchScreen.storyboard
+++ b/StressBomb/Base.lproj/LaunchScreen.storyboard
@@ -13,7 +13,7 @@
         <scene sceneID="EHf-IW-A2E">
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
-                    <imageView key="view" opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Log_In" id="mfH-rA-jho">
+                    <imageView key="view" opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="intro" id="mfH-rA-jho">
                         <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     </imageView>
@@ -26,6 +26,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Log_In" width="1920" height="1080"/>
+        <image name="intro" width="1920" height="1080"/>
     </resources>
 </document>
